# ScienceSage

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
app/: analyze_feedback.py  app.py  config.py  constants.py  feedback_manager.py  main.py  prompts.py  retrieval_system.py
config/: __init__.py  config.py
docs/: about_sciencesage.md  api_reference.md  chunk_data.md  collection_point_data.md  download_metadata.md  embedding_data.md  eval_results_data.md  feedback_data.md  ground_truth_data.md  ground_truth_format.md  llm_evaluation_data.md  project-structure.md  project_lessons.md  project_structure.md  retrieval_evaluation_metrics.md  sciencesage_data.md  sciencesage_mvp_checklist.md  sciencesage_script_workflow.md  sciencesage_streamlit_app_sequence_daigram.md  sciencesage_streamlit_app_sequence_diagram.md  sciencesage_system_architecture.md  sciencesage_ui_manual_testing_checklist.md  sciencesage_ui_try_example_queries.md  sciencesage_ui_walkthrough.md  setup.md  testing.md  using-the-makefile.md  using_the_makefile.md
notebooks/: analyze_user_feedback.ipynb  ck-chunks.ipynb  ck-wikipedia-topics.ipynb  ck_chunks.ipynb  ck_data_sources.ipynb  ck_wikipedia_topics.ipynb  eda.ipynb  grid_search_evaluation.ipynb  qdrant_eda.ipynb  research_wikipedia_topics.ipynb  sanity_check.ipynb  sciencesage_rag_llm_evaluation.ipynb
sciencesage/: analyze_feedback.py  app.py  config.py  feedback_manager.py  main.py  metrics.py  prompts.py  rag_api.py  retrieval_system.py  sciencesage_user_feedback.py
scripts/: chunk_grid_search.py  ck_example_queries.py  create_golden_dataset.py  create_ground_truth_dataset.py  download_and_clean.py  download_data.py  embed.py  evaluate_rag.py  generate_eval_results.py  grid_search_chunk_size_overlap.py  preprocess.py  rag_api.py  rag_llm_evaluation.py  summarize_metrics.py  test_qdrant.py  validate_golden_dataset.py  validate_ground_truth_dataset.py
tests/: __init__.py  conftest.py  streamlit_smoke_test.py  test_app_pipeline.py  test_create_ground_truth_dataset.py  test_download_data.py  test_embed.py  test_example_queries.py  test_feedback_manager.py  test_generate_eval_results.py  test_integration.py  test_missing.py  test_pipeline.py  test_preprocess.py  test_prompts.py  test_qdrant.py  test_rag_api.py  test_rag_llm_evaluation.py  test_reranking.py  test_retrieval_system.py  test_session_state.py  test_ui.py  (+3 more)
