[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
known_first_party = ["sciencesage"]

[tool.mypy]
python_version = 3.12
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[tool.coverage.run]
branch = true
source = ["sciencesage"]

[tool.coverage.report]
show_missing = true
skip_covered = true
