[metadata]
name = science-sage
version = 0.1.0
description = A Streamlit app for scientific concept explanation
author = Lisa Kirch
license = MIT

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    streamlit
    openai
    qdrant-client
    loguru

[options.extras_require]
dev =
    pytest
    black
    isort
