[metadata]
name = science-sage
version = 0.1.0
description = ScienceSage: End-to-end RAG system for science Q&A - Smart Science, Made Simple
author = Lisa Kirch
license = MIT

[options]
packages = find:
python_requires = >=3.12
include_package_data = True
install_requires =
    streamlit
    openai
    qdrant-client
    loguru

[options.extras_require]
dev =
    pytest
    black
    isort
