[metadata]
name = science-sage
version = 0.1.0
description = ScienceSage: End-to-end RAG system for science Q&A - Smart Science, Made Simple
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lkirch/ScienceSage
author = Lisa Kirch
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Education

[options]
packages = find:
python_requires = >=3.12
include_package_data = True
install_requires =
    requests
    python-dotenv
    trafilatura
    lxml[html_clean]
    pdfplumber
    streamlit
    qdrant-client
    openai
    pytest
    notebook
    ipykernel
    tqdm
    tiktoken
    loguru
    pandas

[options.packages.find]
where = .

[options.extras_require]
dev =
    black
    isort
    flake8
    mypy
    pytest
    ipython

[tool:pytest]
testpaths = tests
python_files = test_*.py